<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainPage">
    <LinearLayout
        android:id="@+id/planLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/mainPage">
        <TextView
            android:id="@+id/tvPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthlyPlan"
            android:textSize="30sp"
            android:background="#52796f"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tvMonthlyExercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercisesForThisMonth"
            android:textSize="25sp"
            android:textColor="@color/darkBlue"/>
        <TextView
            android:id="@+id/tvMonthlyStretches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stretchesForThisMonth"
            android:textSize="25sp"
            android:textColor="@color/darkBlue"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_margin="25dp"/>
        <TextView
            android:id="@+id/tvPastPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthlyPastPlan"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="#52796f"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tvMonthlyPastExercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercisesFromPastMonth"
            android:textSize="25sp"
            android:textColor="@color/darkBlue"/>
        <TextView
            android:id="@+id/tvMonthlyPastStretches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stretchesFromPastMonth"
            android:textSize="25sp"
            android:textColor="@color/darkBlue"/>

    </LinearLayout>
</ScrollView>